src/test/deca/avecObjet/valid/method_call_on_var_object.deca
// Description :
//    Appel de méthode via une variable objet.
//
// Resultats :
//    2

class A {
    int f() {
        return 2;
    }
}

{
    A a = new A();
    println(a.f());
}

