src/test/deca/avecObjet/invalid/call_method_wrong_arg_count_0.deca
// Description :
//    Appel d'une méthode avec trop peu d'arguments.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int f(int x) {
        return x;
    }
}

{
    A a = new A();
    a.f();
}

